add_block_fresh_and_styles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,48 @@
     <title>Cahee</title>
 </head>
 <body>
-    
+    <main class="main">
+        <section class="fresh">
+            <div class="fresh__head">
+                <img src="./images/logo.png" alt="Cahee">
+                <nav class="fresh__nav">
+                    <a class='fresh__nav_home' href="#">Home</a>  
+                    <a href="#">About</a>
+                    <a href="#">services</a>
+                    <a href="#">gallery</a>
+                    <a href="#">blog</a>
+                    <a href="#">contact</a>  
+                </nav>
+            </div>
+            <div class="fresh__body">
+                <h1>Fresh Life</h1>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                <a href="#">GET FREE NOW</a>
+            </div>
+            <img class='fresh__scroll' src="./images/scroll.png" alt="scroll">
+        </section>
+        <section class="about">
+
+        </section>
+        <section class="services">
+
+        </section>
+        <section class="gallery">
+
+        </section>
+        <section class="subscribe">
+
+        </section>
+        <section class="blog">
+
+        </section>
+        <section class="contact">
+
+        </section>
+    </main>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
