--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
             <img class='fresh__scroll' src="./images/scroll.png" alt="scroll">
         </section>
         <section class="about">
-
+            <div class="about__text">
+                <h1>About Us</h1>
+                <p>Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <p>Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+            </div>
         </section>
         <section class="services">
 
