add_block_services_and_styles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,25 @@
             </div>
         </section>
         <section class="services">
-
+            <div class='services__list'>
+                <div class="services__list_element">
+                    <h5 class="services__list_element_online">Online Shopping</h5>
+                    <img src="./images/basket.svg" alt="basket">
+                </div>
+                <div class="services__list_element">
+                    <h5 class="services__list_element_quality">Quality Product</h5>
+                    <img src="./images/hand.svg" alt="hand">
+                </div>
+                <div class="services__list_element">
+                    <h5 class="services__list_element_domestic">Domestic & International Delivery</h5>
+                    <img src="./images/earth.svg" alt="earth">
+                </div>
+                <div class="services__list_element">
+                    <h5 class="services__list_element_well">Well Organized</h5>
+                    <img src="./images/carrot.svg" alt="carrot">
+                </div>
+            </div>
+            <h1>Our Services</h1>
         </section>
         <section class="gallery">
 
