add_block_gallery_and_styles

--- a/index.html
+++ b/index.html
@@ -61,7 +61,22 @@
             <h1>Our Services</h1>
         </section>
         <section class="gallery">
-
+            <h1>Gallery</h1>
+            <h5>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+            <div class="gallery__line1">
+                <p><img src="./images/photo1.png" alt="1"></p>
+                <div class="gallery__line1_second">
+                    <p><img src="./images/photo2.png" alt="2"></p>
+                    <p><img src="./images/photo3.png" alt="3"></p>
+                </div>
+            </div>
+            <div class="gallery__line2">
+                <p><img src="./images/photo4.png" alt="4"></p>
+                <p><img class="gallery__line2_photo5" src="./images/photo5.png" alt="5"></p>
+            </div>
+            <div class="gallery_button">
+                <a href="#">VIEW MORE</a>
+            </div>
         </section>
         <section class="subscribe">
 
