add_block_subscribe_and_styles

--- a/index.html
+++ b/index.html
@@ -64,22 +64,25 @@
             <h1>Gallery</h1>
             <h5>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
             <div class="gallery__line1">
-                <p><img src="./images/photo1.png" alt="1"></p>
+                <p><img src="./images/photo1.png" alt="peach"></p>
                 <div class="gallery__line1_second">
-                    <p><img src="./images/photo2.png" alt="2"></p>
-                    <p><img src="./images/photo3.png" alt="3"></p>
+                    <p><img src="./images/photo2.png" alt="blueberry"></p>
+                    <p><img src="./images/photo3.png" alt="blackberry"></p>
                 </div>
             </div>
             <div class="gallery__line2">
-                <p><img src="./images/photo4.png" alt="4"></p>
-                <p><img class="gallery__line2_photo5" src="./images/photo5.png" alt="5"></p>
+                <p><img src="./images/photo4.png" alt="milk"></p>
+                <p><img class="gallery__line2_photo5" src="./images/photo5.png" alt="persimmon"></p>
             </div>
             <div class="gallery_button">
                 <a href="#">VIEW MORE</a>
             </div>
         </section>
         <section class="subscribe">
-
+            <h1>Subscribe To Us</h1>
+            <p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <input type="text" required placeholder="Your email address...">
+            <button>SUBSCRIBE</button>
         </section>
         <section class="blog">
 
