--- a/index.html
+++ b/index.html
@@ -85,10 +85,38 @@
             <button>SUBSCRIBE</button>
         </section>
         <section class="blog">
-
+            <h1>Blog</h1>
+            <p>Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+            <div class="blog__bilboards">
+                <div class="blog__bilboards_block1">
+                    <div class="blog__bilboards_block1_date">
+                        <h2>20</h2>
+                        <h3>NOV</h3>
+                    </div>
+                    <h4>Green Smoothies: Too Much of a Good Thing?</h4>
+                    <h5>By Auskteez - 2 hours ago</h5>
+                </div>
+                <div class="blog__bilboards_block2">
+                    <div class="blog__bilboards_block2_date">
+                        <h2>14</h2>
+                        <h3>NOV</h3>
+                    </div>
+                    <h4>Growing Food and a “Thirst” for Innovation</h4>
+                    <h5>By Auskteez - 3 hours ago</h5>
+                </div>
+                <div class="blog__bilboards_block3">
+                    <div class="blog__bilboards_block3_date">
+                        <h2>10</h2>
+                        <h3>NOV</h3>
+                    </div>
+                    <h4>Pesticides & Food: What You Need to Know</h4>
+                    <h5>By Auskteez - 6 hours ago</h5>
+                </div>
+            </div>
+            <a href="#">VIEW MORE</a>
         </section>
         <section class="contact">
-
+            
         </section>
     </main>
 
