add_block_contact_and_styles

--- a/index.html
+++ b/index.html
@@ -116,12 +116,31 @@
             <a href="#">VIEW MORE</a>
         </section>
         <section class="contact">
-            
+            <h1>Contact</h1>
+            <p>For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
+            <div class='contact__communication'>
+                <form action="#" class="contact__communication_form" method="get">
+                    <input type="text" required placeholder="Auskteez Tran">
+                    <input type="text" required placeholder="Your email...">
+                    <input type="text" required placeholder="Your phone number...">
+                    <textarea name="text" cols="30" rows="10" placeholder="Your messge..."></textarea>
+                </form>
+                <div class="contact__communication_adress">
+                    <h3>ADDRESS</h3>
+                    <h4>123 City name, Street, City, Country</h4>
+                    <h3>EMAIL</h3>
+                    <h4>cahee@domain.com</h4>
+                    <h3>PHONE</h3>
+                    <h4>+012 345 6789</h4>
+                </div>
+            </div>  
         </section>
     </main>
 
     <footer class="footer">
-
+        <h4>© 2015 Company. All right reserved.</h4>
+        <img src="./images/logo-small.png" alt="cahee">
+        <h5>Made with <span>love</span> by Auskteez</h5>
     </footer>
 </body>
 </html>
