add_mixins_and_hover

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p><img src="./images/photo4.png" alt="milk"></p>
                 <p><img class="gallery__line2_photo5" src="./images/photo5.png" alt="persimmon"></p>
             </div>
-            <div class="gallery_button">
+            <div class="gallery__button">
                 <a href="#">VIEW MORE</a>
             </div>
         </section>
