refactoring_and_testing_project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,18 +12,19 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Cahee</title>
 </head>
+
 <body>
     <main class="main">
         <section class="fresh">
             <div class="fresh__head">
                 <img src="./images/logo.png" alt="Cahee">
                 <nav class="fresh__nav">
-                    <a class='fresh__nav_home' href="#">Home</a>  
+                    <a class='fresh__nav_home' href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">services</a>
                     <a href="#">gallery</a>
                     <a href="#">blog</a>
-                    <a href="#">contact</a>  
+                    <a href="#">contact</a>
                 </nav>
             </div>
             <div class="fresh__body">
@@ -42,19 +44,19 @@
         <section class="services">
             <div class='services__list'>
                 <div class="services__list_element">
-                    <h5 class="services__list_element_online">Online Shopping</h5>
+                    <h5 class="services__list_online">Online Shopping</h5>
                     <img src="./images/basket.svg" alt="basket">
                 </div>
                 <div class="services__list_element">
-                    <h5 class="services__list_element_quality">Quality Product</h5>
+                    <h5 class="services__list_quality">Quality Product</h5>
                     <img src="./images/hand.svg" alt="hand">
                 </div>
                 <div class="services__list_element">
-                    <h5 class="services__list_element_domestic">Domestic & International Delivery</h5>
+                    <h5 class="services__list_domestic">Domestic & International Delivery</h5>
                     <img src="./images/earth.svg" alt="earth">
                 </div>
                 <div class="services__list_element">
-                    <h5 class="services__list_element_well">Well Organized</h5>
+                    <h5 class="services__list_well">Well Organized</h5>
                     <img src="./images/carrot.svg" alt="carrot">
                 </div>
             </div>
@@ -89,7 +91,7 @@
             <p>Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
             <div class="blog__bilboards">
                 <div class="blog__bilboards_block1">
-                    <div class="blog__bilboards_block1_date">
+                    <div class="blog__bilboards_date">
                         <h2>20</h2>
                         <h3>NOV</h3>
                     </div>
@@ -97,7 +99,7 @@
                     <h5>By Auskteez - 2 hours ago</h5>
                 </div>
                 <div class="blog__bilboards_block2">
-                    <div class="blog__bilboards_block2_date">
+                    <div class="blog__bilboards_date">
                         <h2>14</h2>
                         <h3>NOV</h3>
                     </div>
@@ -105,7 +107,7 @@
                     <h5>By Auskteez - 3 hours ago</h5>
                 </div>
                 <div class="blog__bilboards_block3">
-                    <div class="blog__bilboards_block3_date">
+                    <div class="blog__bilboards_date">
                         <h2>10</h2>
                         <h3>NOV</h3>
                     </div>
@@ -133,7 +135,7 @@
                     <h3>PHONE</h3>
                     <h4>+012 345 6789</h4>
                 </div>
-            </div>  
+            </div>
         </section>
     </main>
 
@@ -143,4 +145,5 @@
         <h5>Made with <span>love</span> by Auskteez</h5>
     </footer>
 </body>
+
 </html>
